--- a/src/main/resources/assets/ancienttimes/lang/en_US.lang
+++ b/src/main/resources/assets/ancienttimes/lang/en_US.lang
@@ -2,12 +2,13 @@ item.cloth.name=Cloth
 item.bronze.name=Bronze
 item.bronze_axe.name=Bronze Axe
 item.bronze_hoe.name=Bronze Hoe
+item.bronze_nugget.name=Bronze Nugget
 item.bronze_pickaxe.name=Bronze Pickaxe
 item.bronze_shovel.name=Bronze Shovel
 item.copper.name=Copper
-item.copper_nugget.name=Copper Nugget
 item.copper_axe.name=Copper Axe
 item.copper_hoe.name=Copper Hoe
+item.copper_nugget.name=Copper Nugget
 item.copper_pickaxe.name=Copper Pickaxe
 item.copper_shovel.name=Copper Shovel
 item.tin.name=Tin
